Adjust for iPhone

--- a/OMSC4G.html
+++ b/OMSC4G.html
@@ -105,8 +105,6 @@ this tool.
 			font-size: 1.3em;
 		}
 		
-		/*--------------- IOS: 376, 377-813 -------------*/
-		
 		/*---------------- iPhone Portrait --------------*/	
 		@media screen and (max-width: 376px) {	
 			.topnav a:not(:first-child) {display: none;}
@@ -162,15 +160,7 @@ this tool.
 				margin-top: -2em;
 			}
 		}
-		
-		/*---------------- iPhone Landscape --------------*/	
-		/*@media screen and (min-width: 377px) and (max-width:813px) and (orientation: landscape) {	
-			.topnav a:not(:first-child) {display: none;}
-			.topnav a.icon {
-				float: right;
-				display: block;
-			}
-		}*/
+
 		/*@media screen and (min-width: 377px) and (max-width:813px) and (orientation: landscape) {*/
 		@media only screen and (max-width: 815px) and (min-width: 378px) and (orientation: landscape){
 			.resp_logo{
@@ -326,7 +316,7 @@ this tool.
 </head>
 <body>
 	<header>
-		<img src="images/gt-logo-gold.png" alt="the words, Georgia Tech and a crown image, all in gold" align="left" class="resp_logo">
+		<a href="https://gatech.edu" target="_blank"><img src="images/gt-logo-gold.png" alt="the words, Georgia Tech and a crown image, all in gold" align="left" class="resp_logo"></a>
 		<h3 id="course">CS6150 Fall 2021, Computing for Good</h3>
         <h4 id="santosh">Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a></h4>
         <h5 id="dante" style="margin-bottom:0.5em">Instructional Associate: Dante Ciolfi, <a href="mailto:dantec@gatech.edu">dantec@gatech.edu</a></h5>
