--- a/projects.html
+++ b/projects.html
@@ -11,192 +11,257 @@ this tool.
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>OMSC4G</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!------------------ W3 Responsive Menu and Dante CSS ---------------->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-html {
-	color: #000;
-	font-family: "Roboto", sans-serif;
-	font-size: 16px;
-}
-
-body {
-	font-family: Arial, Helvetica, sans-serif;
-	margin: 0 auto;
-	width: 98%;
-}
-
-.topnav {
-	margin-top: 1em;
-	overflow: hidden;
-	background-color: black;
-	position: relative;
-	top: 0.7em;
-	width: 73%;
-}
-
-.topnav a {
-	float: left;
-	display: block;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-}
-
-.topnav a:hover {
-	background-color: #ddd;
-	color: black;
-}
-
-.topnav a.active {
-	background-color: #B3A369;
-	color: white;
-}
-
-.topnav .icon {
-	display: none;
-}
-
-@media screen and (max-width: 824px) {
-	.topnav a:not(:first-child) {
-		display: none;
-	}
-	.topnav a.icon {
-		float: right;
-		display: block;
-	}
-	.resp_image {
-		width: 100%;
-	}
-}
-
-@media screen and (max-width: 824px) {
-	.topnav.responsive {
-		position: relative;
-	}
-	.topnav.responsive .icon {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-	.topnav.responsive a {
-		float: none;
-		display: block;
-		text-align: left;
-	}
-	.resp_image {
-		width: 100%;
-	}
-}
-
-img.resp_logo {
-	position: relative;
-	margin-top: 1em;
-	top: 1em;
-}
-
-#course {
-	position: relative;
-	top: 0.5em;
-}
-
-#santosh {
-	position: relative;
-	top: 1em;
-}
-
-#dante {
-	position: relative;
-	top: 1.4em;
-}
-
-.initialtext {
-	font-size: 1.3em;
-}
-
-#main_section {
-	position: relative;
-	float: left;
-	top: 1em;
-}
-
-section {
-	margin-top: 1.5em;
-}
-
-/*---------------- iPad Portrait ---------------*/
-@media only screen and (min-device-width: 767px) and (max-device-width:
-	1025px) and (orientation:portrait) {
-	/*body{
-				border: 3px solid red;
+	<title>OMSC4G</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!------------------ W3 Responsive Menu and Dante CSS ---------------->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		html {
+			color: #000;
+			font-family: "Roboto", sans-serif;
+			font-size: 16px;
+		}	
+		body {
+			font-family: Arial, Helvetica, sans-serif;
+			margin: 0 auto;
+			width: 98%;
+		}
+		.topnav {
+			margin-top: 1em;
+			overflow: hidden;
+			background-color: black;
+			position: relative;
+			top: 0.7em;
+			width: 73%;
+		}
+		.topnav a {
+			float: left;
+			display: block;
+			color: #f2f2f2;
+			text-align: center;
+			padding: 14px 16px;
+			text-decoration: none;
+			font-size: 17px;
+		}
+		.topnav a:hover {
+			background-color: #ddd;
+			color: black;
+		}	
+		.topnav a.active {
+			background-color: #B3A369;
+			color: white;
+		}
+		.topnav .icon {
+			display: none;
+		}	
+		@media screen and (max-width: 824px) {
+			.topnav a:not(:first-child) {
+				display: none;
+			}
+			.topnav a.icon {
+				float: right;
+				display: block;
+			}
+			.resp_image {
+				width: 100%;
+			}
+		}
+		@media screen and (max-width: 824px) {
+			.topnav.responsive {
 				position: relative;
-				height: 100vh;
-				width: 96vw;
-				left: 4em;
-				margin: 0 auto;	
-			}*/
-	.resp_logo {
-		position: relative;
-		left: 0em;
-		top: 1em;
-		max-width: 50%;
-	}
-	#course {
-		position: relative;
-		margin-bottom: 0em;
-		padding-top: 1em;
-		left: 0.2em;
-		top: 0em;
-	}
-	#santosh {
-		position: relative;
-		left: 0em;
-		margin-top: 0em;
-		top: -0.1em;
-	}
-	#dante {
-		position: relative;
-		left: 27.3em;
-		top: -9.5em;
-	}
-	.topnav {
-		position: relative;
-		top: 1em;
-	}
-	#main_section {
-		position: relative;
-		top: -5.5em;
-	}
-}
+			}
+			.topnav.responsive .icon {
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+			.topnav.responsive a {
+				float: none;
+				display: block;
+				text-align: left;
+			}
+			.resp_image {
+				width: 100%;
+			}
+		}	
+		img.resp_logo {
+			position: relative;
+			margin-top: 1em;
+			top: 1em;
+		}
+		#course {
+			position: relative;
+			top: 0.5em;
+		}
+		#santosh {
+			position: relative;
+			top: 1em;
+		}
+		#dante {
+			position: relative;
+			top: 1.4em;
+		}
+		.initialtext {
+			font-size: 1.3em;
+		}
+		#main_section {
+			position: relative;
+			float: left;
+			top: 1em;
+		}
+		section {
+			margin-top: 1.5em;
+		}
+	
+		/*---------------- iPhone Portrait --------------*/	
+		@media screen and (max-width: 376px) {	
+			.topnav a:not(:first-child) {display: none;}
+			.topnav a.icon {
+				float: right;
+				display: block;
+			}
+		}
+		@media screen and (max-width: 376px) {
+			body{
+				margin: 0 auto;
+				width: 93vw;
+			}
+			.resp_logo{
+				position: relative;
+				padding-bottom: 0em;
+				left: 0em;
+				top: 0em;
+				width: 100%;
+			}
+			#course{
+				margin-bottom: 2em;
+			}
+			#santosh{
+				position: relative;
+				top: -2em;
+				margin-bottom: 3em;			
+			}
+			#dante{
+				position: relative;
+				top: -5.5em;
+			}
+			.resp_image{
+				position: relative;
+				top: -4em;
+				width: 49.5%;
+				margin-bottom: -1em;
+			}
+			.topnav{
+				position: relative;
+				top: -4.7em;
+				width: 98%;
+			}
+			.topnav.responsive {position: relative;}
+			.topnav.responsive .icon {
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
+			.topnav.responsive a {
+				float: none;
+				display: block;
+				text-align: left;
+			}
+			#main_section{
+				position: relative;
+				float: left;
+				top: -5em;
+			}
+		}
+		
+		/*-------------- iPhone Landscape --------------*/	
+		@media screen and (max-width: 813px) and (orientation:landscape) {
+			#course{
+				position: relative;
+				top: 0.8em;
+			}
+			#santosh{
+				position: relative;
+				top: 1.7em;
+			}
+			#dante{
+				position: relative;
+				top: 2.4em;
+			}
+			.topnav{
+				position: relative;
+				top: 1.8em;
+				width: 56vw;
+			}
+		}	
 
-/*---------------- iPad Landscape --------------*/
-@media only screen and (max-device-width: 1024px) and
-	(orientation:landscape) {
-	body {
-		margin: 0 auto;
-		width: 96vw;
-	}
-}
-</style>
+		/*---------------- iPad Portrait ---------------*/
+		@media only screen and (min-device-width: 767px) and (max-device-width:
+			1025px) and (orientation:portrait) {
+			/*body{
+						border: 3px solid red;
+						position: relative;
+						height: 100vh;
+						width: 96vw;
+						left: 4em;
+						margin: 0 auto;	
+			}*/
+			.resp_logo {
+				position: relative;
+				left: 0em;
+				top: 1em;
+				max-width: 50%;
+			}
+			#course {
+				position: relative;
+				margin-bottom: 0em;
+				padding-top: 1em;
+				left: 0.2em;
+				top: 0em;
+			}
+			#santosh {
+				position: relative;
+				left: 0em;
+				margin-top: 0em;
+				top: -0.1em;
+			}
+			#dante {
+				position: relative;
+				left: 27.3em;
+				top: -9.5em;
+			}
+			.topnav {
+				position: relative;
+				top: 1em;
+			}
+			#main_section {
+				position: relative;
+				top: -5.5em;
+			}
+		}
+		
+		/*---------------- iPad Landscape --------------*/
+		@media only screen and (max-device-width: 1024px) and
+			(orientation:landscape) {
+			body {
+				margin: 0 auto;
+				width: 96vw;
+			}
+		}
+	</style>
 </head>
 <body>
 	<header style="margin: 0em; padding: 0">
-		<img class="resp_logo" src="images/gt-logo-gold-33percent.png"
-			alt="the words, Georgia Tech and a crown image, all in gold"
-			align="left"
-			style="position: relative; top: 0.0em; margin-bottom: 1em">
+		<a href="https://gatech.edu" target="_blank">
+			<img class="resp_logo" src="images/gt-logo-gold-33percent.png" alt="the words, Georgia Tech and a crown image, all in gold" align="left" style="position: relative; top: 0.0em; margin-bottom: 1em">
+		</a>
 		<h3 id="course">CS6150 Fall 2021, Computing for Good</h3>
 		<h4 id="santosh">
 			Professor: Santosh Vempala, <a href="mailto:vempala@gatech.edu">vempala@gatech.edu</a>
@@ -233,15 +298,6 @@ section {
 			</p>
 		</section>
 	</div>
-
-	<!--<div id="main_section">
-	    <section>
-	    	<h3>C4G Student Projects</h3>
-	    	<p>
-	            <span class="initialtext">Student projects will soon be available on this page.</span> Our course launches in Fall 2021, so please stay tuned.
-	        </p>
-	    </section>
-	</div>-->
 
 	<!-------------- Script for nav menu -------------->
 	<script>
