--- a/old_files/toyama.html
+++ b/old_files/toyama.html
@@ -192,7 +192,7 @@ this tool.
 
     <section>
     	<h3 style="display:inline">
-    		Kentaro Toyama PowerPoint - The Myths of ICT4D <span style="color:red;font-size:0.8em">(NOTE: this PPTX is hosted on Dante's OneDrive)</span>
+    		Kentaro Toyama PowerPoint - Ten Myths of ICT4D <span style="color:red;font-size:0.8em">(NOTE: this PPTX is hosted on Dante's OneDrive)</span>
     	</h3>
     </section>
     <!--<iframe src='https://view.officeapps.live.com/op/embed.aspx?src=[https://www.https://htmlpreview.github.io/?https://raw.githubusercontent.com/santoshv/C4G/slides/myths_ict4d.ppt]' width='100%' height='600px' frameborder='0'>--> 
